Update templates and styles, add structured data
Update templates, add structured data, updated styles.

--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -430,7 +430,7 @@ header.tag-head {
 }
 
 header.no-cover {
-	display: none;
+	background-color: #2196F3;
 }
 
 .post-comments , .post-info .author a{
