--- a/src/app/templates/_includes/_nav.jade
+++ b/src/app/templates/_includes/_nav.jade
@@ -12,5 +12,5 @@ nav.nav.row.middle-xs
                     a(href='http://carloscuesta.me/blog')
                         |Blog
                 li.item
-                    a(href='http://carloscuesta.me/mailto:crloscuesta@gmail?subject=Hello! I saw your web')
+                    a(href='http://carloscuesta.me/mailto:crloscuesta@gmail?subject=Hello!')
                         |Contact
