--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -372,6 +372,16 @@ header.tag-head {
 	height: 125px;
 }
 
+.author-img-post {
+	border-radius: 50%;
+	width: 80px;
+	margin-top: 15px
+}
+
+h3.author-name {
+	padding: 0 .5rem;
+}
+
 .author-image {
 	border: 4px solid #fff;
 	border-radius: 50%;
@@ -817,6 +827,10 @@ iframe, .fluid-width-video-wrapper {
 
 	.nav-items {
 		padding-top: .5em;
+	}
+
+	.author-img-post {
+		display: none;
 	}
 }
 
