Add forever, update styles
Added forever and modified start script, added forever as a dependency,
update styles.

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -66,6 +66,7 @@ nav.nav {
 		font-size: 3em;
 		list-style: none;
 		font-weight: 400;
+		margin : .4em 0;
 		transition: all .2s ease-in-out;
 		a {
 			display: block;
