Add google-verification meta, update templates and styles
Add google-verification meta, update templates and styles.

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -331,6 +331,10 @@ section h1{
 	.col-xs-12.title {
 		padding: 0;
 	}
+
+	.c-hamburger--htx {
+		right: 15px;
+	}
 }
 
 @media(max-width: 767px) {
