--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -1,4 +1,5 @@
 title #{site.title}
+meta(name="google-site-verification", content="78vmlhi_erc-UGybxcGwHyiUtf04wzYExTLa-4LoWio")
 meta(name="description", content="#{site.description}")
 meta(name="author", content="#{me.name}")
 meta(charset="utf-8")
