--- a/src/blog/content/themes/carloscuesta/partials/loop.hbs
+++ b/src/blog/content/themes/carloscuesta/partials/loop.hbs
@@ -4,7 +4,7 @@
 		    <header class="row">
 		    	<div class="col-xs-12">
 		        	<h2 itemprop="name headline" class="post-title preview">
-		        		<a itemprop="url" href="{{url}}">{{{title}}}</a>
+		        		<a itemprop="url mainEntityOfPage" href="{{url absolute="true"}}">{{{title}}}</a>
 		        	</h2>
 		        </div>
 		        <div class="col-xs-12 post-info">
