--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -2,17 +2,17 @@
 <style>code[class*="language-"],pre[class*="language-"] {color: black;text-shadow: 0 1px white;font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;direction: ltr;text-align: left;white-space: pre;word-spacing: normal;word-break: normal;word-wrap: normal;line-height: 1.5;-moz-tab-size: 4;-o-tab-size: 4;tab-size: 4;-webkit-hyphens: none;-moz-hyphens: none;-ms-hyphens: none;hyphens: none;}pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {text-shadow: none;background: #b3d4fc;}pre[class*="language-"]::selection, pre[class*="language-"] ::selection,code[class*="language-"]::selection, code[class*="language-"] ::selection {text-shadow: none;background: #b3d4fc;}@media print {code[class*="language-"],pre[class*="language-"] {text-shadow: none;}}pre[class*="language-"] {padding: 1em;margin: .5em 0;overflow: auto;}:not(pre) > code[class*="language-"],pre[class*="language-"] {background: #f5f5f5;}:not(pre) > code[class*="language-"] {padding: .1em;border-radius: .3em;white-space: normal;}.token.comment,.token.prolog,.token.doctype,.token.cdata {color: slategray;}.token.punctuation {color: #999;}.namespace {opacity: .7;}.token.property,.token.tag,.token.boolean,.token.number,.token.constant,.token.symbol,.token.deleted {color: #905;}.token.selector,.token.attr-name,.token.string,.token.char,.token.builtin,.token.inserted {color: #690;}.token.operator,.token.entity,.token.url,.language-css .token.string,.style .token.string {color: #a67f59;background: hsla(0, 0%, 100%, .5);}.token.atrule,.token.attr-value,.token.keyword {color: #07a;}.token.function {color: #DD4A68;}.token.regex,.token.important,.token.variable {color: #e90;}.token.important,.token.bold {font-weight: bold;}.token.italic {font-style: italic;.token.entity {cursor: help;}</style>
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        <!--{{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}-->
-    </nav>
+<header class="main-header post-head{{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
+
 </header>
 <div class="wrap">
 <main class="content" role="main">
     <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="{{post_class}}">
 
         <header class="post-header row">
-            <h1 itemprop="name headline" class="post-title col-xs-12">{{title}}</h1>
+        	<a itemprop="mainEntityOfPage" href="{{url absolute="true"}}">
+            	<h1 itemprop="name headline" class="post-title col-xs-12">{{title}}</h1>
+            </a>
             <section class="post-meta col-xs-12">
                 <time class="post-date" datetime="{{date format='YYYY-MM-DD'}}" itemprop="datePublished">
                 	{{date format="DD MMMM YYYY"}}
