Add more structured data, update templates structure
Updated post template structure to add the structured data, updated
styles.

--- a/src/app/templates/_includes/_sections/_aboutme.jade
+++ b/src/app/templates/_includes/_sections/_aboutme.jade
@@ -1,4 +1,4 @@
-section.aboutme
+section.aboutme(itemprop="author" itemscope itemtype="http://schema.org/Person")
     .wrap-small
         .row.middle-xs
             .col-xs-12.col-sm-8.bio
