--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -2,12 +2,15 @@
 <style>code[class*="language-"],pre[class*="language-"] {color: black;text-shadow: 0 1px white;font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;direction: ltr;text-align: left;white-space: pre;word-spacing: normal;word-break: normal;word-wrap: normal;line-height: 1.5;-moz-tab-size: 4;-o-tab-size: 4;tab-size: 4;-webkit-hyphens: none;-moz-hyphens: none;-ms-hyphens: none;hyphens: none;}pre[class*="language-"]::-moz-selection, pre[class*="language-"] ::-moz-selection,code[class*="language-"]::-moz-selection, code[class*="language-"] ::-moz-selection {text-shadow: none;background: #b3d4fc;}pre[class*="language-"]::selection, pre[class*="language-"] ::selection,code[class*="language-"]::selection, code[class*="language-"] ::selection {text-shadow: none;background: #b3d4fc;}@media print {code[class*="language-"],pre[class*="language-"] {text-shadow: none;}}pre[class*="language-"] {padding: 1em;margin: .5em 0;overflow: auto;}:not(pre) > code[class*="language-"],pre[class*="language-"] {background: #f5f5f5;}:not(pre) > code[class*="language-"] {padding: .1em;border-radius: .3em;white-space: normal;}.token.comment,.token.prolog,.token.doctype,.token.cdata {color: slategray;}.token.punctuation {color: #999;}.namespace {opacity: .7;}.token.property,.token.tag,.token.boolean,.token.number,.token.constant,.token.symbol,.token.deleted {color: #905;}.token.selector,.token.attr-name,.token.string,.token.char,.token.builtin,.token.inserted {color: #690;}.token.operator,.token.entity,.token.url,.language-css .token.string,.style .token.string {color: #a67f59;background: hsla(0, 0%, 100%, .5);}.token.atrule,.token.attr-value,.token.keyword {color: #07a;}.token.function {color: #DD4A68;}.token.regex,.token.important,.token.variable {color: #e90;}.token.important,.token.bold {font-weight: bold;}.token.italic {font-style: italic;.token.entity {cursor: help;}</style>
 {{#post}}
 
-<header class="main-header post-head{{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
+<article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="{{post_class}}">
 
+<header itemprop="image" itemscope itemtype="https://schema.org/ImageObject" class="main-header post-head{{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
+	{{#if image}}
+	<meta itemprop="url" content="{{image}}">
+	{{/if}}
 </header>
 <div class="wrap">
-<main class="content" role="main">
-    <article itemscope itemtype="http://schema.org/BlogPosting" role="article" class="{{post_class}}">
+	<main class="content" role="main">
 
         <header class="post-header row">
         	<a itemprop="mainEntityOfPage" href="{{url absolute="true"}}">
@@ -34,12 +37,12 @@
 
         {{#author}}
 
-            <section class="author col-xs-12 col-sm-8">
+            <section class="author col-xs-12 col-sm-8" itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
             	<div class="row top-xs">
                 	{{#if bio}}
             			{{#if image}}
 	    	    			<figure class="col-xs-3 center-xs">
-	    	    			    <img itemprop="image" src="{{image}}" class="author-img-post" alt="{{name}}">
+	    	    			    <img itemprop="image logo" src="{{image}}" class="author-img-post" alt="{{name}}">
 	    	    			</figure>
     	    			{{/if}}
     	    			<div class="col-xs-12 col-sm-9">
@@ -63,7 +66,7 @@
 	            	</svg>
                     <span class="hidden">Twitter</span>
                 </a>
-                <a href="https://www.linkedin.com/shareArticle?mini=true&amp;title={{encode title}}&amp;url={{url absolute="true"}}&amp;source=http://carloscuesta.me"
+                <a href="https://www.linkedin.com/shareArticle?mini=true&amp;title={{encode title}}&amp;url=	{url absolute="true"}&amp;source=http://carloscuesta.me"
                    onclick="window.open(this.href, 'linkedin-share', 'width=490,height=530');return false;">
                    <svg class="icon icon-linkedin">
 	                	<use xlink:href="#icon-linkedin"></use>
@@ -74,8 +77,8 @@
 
         </footer>
     	<div itemprop="comment" id="disqus_thread" class="disqus-comments col-xs-12"></div>
-    </article>
-</main>
+	</main>
+</article>
 
 </div>
 <aside class="read-next">
