Update structured data
Update structured data

--- a/src/app/templates/_includes/_sections/_ghost.jade
+++ b/src/app/templates/_includes/_sections/_ghost.jade
@@ -5,7 +5,7 @@ section.ghost
                 h1 I write posts on my #[a(href='/blog') blog].
         .row
             -each post in ghostData.posts
-                article.post.col-xs-12.col-sm-6(itemscope, itemtype="http://schema.org/BlogPosting", role="article")
+                article.post.col-xs-12.col-sm-6
                     .row.middle-xs
                         header.col-xs-12
                             h2.post-title
