--- a/src/blog/content/themes/carloscuesta/partials/loop.hbs
+++ b/src/blog/content/themes/carloscuesta/partials/loop.hbs
@@ -15,7 +15,8 @@
     					{{/foreach}}
     				</span>
 		        	<span itemprop="author" itemscope itemtype="http://schema.org/Person" class="author">
-		        	<span itemprop="name">{{author}}</span></span>
+		        		<span itemprop="name">{{author}}</span>
+		        	</span>
 		        </div>
 		        <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
   					<div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
