--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -35,11 +35,11 @@
             {{content}}
         </section>
 
-        <footer itemprop="author" itemscope itemtype="http://schema.org/Person" class="post-footer row">
+        <footer>
 
         {{#author}}
 
-            <section class="author col-xs-12 col-sm-8">
+            <section class="author col-xs-12 col-sm-8" itemprop="author" itemscope itemtype="http://schema.org/Person" class="post-footer row">
             	<div class="row top-xs">
                 	{{#if bio}}
             			{{#if image}}
