Fix and update styles
Fix and update styles, added post-footer class to footer.

--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -506,6 +506,10 @@ header.no-cover {
 	color: #3F404B;
 }
 
+.post-template .content h1, .post-template .content h2, .post-template .content h3, .post-template .content h4, .post-template .content h5, .post-template .content h6,{
+	margin-bottom: .5em;
+}
+
 .post .icon {
 	width: 1.5em;
 	height: 1.5em;
