--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -36,7 +36,7 @@
             {{content}}
         </section>
 
-        <footer class="row">
+        <footer class="post-footer row">
 
         {{#author}}
 
