Add HTTPs links
Added https for navigation links.

--- a/src/app/templates/_includes/_nav.jade
+++ b/src/app/templates/_includes/_nav.jade
@@ -6,10 +6,10 @@ nav.nav.row.middle-xs
         .modal-content
             ul.navigation
                 li.item
-                    a(href='http://carloscuesta.me')
+                    a(href='https://carloscuesta.me')
                         |Home
                 li.item
-                    a(href='http://carloscuesta.me/blog')
+                    a(href='https://carloscuesta.me/blog')
                         |Blog
                 li.item
                     a(href='mailto:crloscuesta@gmail?subject=Hello!')
