Update head template and ghost config
Set url canonical to https version, add urlSSL and forceAdminSSL to
true.

--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -3,6 +3,7 @@ meta(name="google-site-verification", content="78vmlhi_erc-UGybxcGwHyiUtf04wzYEx
 meta(name="description", content="#{site.description}")
 meta(name="author", content="#{me.name}")
 meta(charset="utf-8")
+link(rel="canonical", href="https://carloscuesta.me/")
 meta(name="viewport", content="width=device-width, initial-scale=1.0")
 meta(name="twitter:card", content="summary")
 meta(name="twitter:description", content="#{site.description}")
