--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -50,7 +50,7 @@
     	    			{{/if}}
     	    			<div class="col-xs-12 col-sm-9">
     	    			    <h3 itemprop="name" class="author-name col-xs-12"><a href="{{url}}">{{name}}</a></h3>
-                	    	<p itemprop="description" class="col-xs-10">{{bio}}</p>
+                	    	<p itemprop="description" class="col-xs-12 col-sm-10">{{bio}}</p>
                 	    </div>
                 	{{else}}
                 	    <p>Read <a href="{{url}}">more posts</a> by this author.</p>
