--- a/src/app/templates/_includes/_body.jade
+++ b/src/app/templates/_includes/_body.jade
@@ -4,4 +4,4 @@ include _sections/_twitter.jade
 include _sections/_ghost.jade
 include _footer.jade
 script.
-    (function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b;a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)};a[b].l=1*new Date;c=e.createElement(f);d=e.getElementsByTagName(f)[0];c.async=1;c.src=g;d.parentNode.insertBefore(c,d)})(window,document,"script","js/ga.js","ga");ga("create","UA-67824860-3","auto");ga("send","pageview");
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','js/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');
