--- a/src/blog/content/themes/carloscuesta/assets/css/style.css
+++ b/src/blog/content/themes/carloscuesta/assets/css/style.css
@@ -826,106 +826,6 @@ iframe, .fluid-width-video-wrapper {
 	font-weight: 300;
 }
 
-/* MEDIA QUERIES GENERAL */
-
-@media (max-width: 767px) {
-	.author-img-post {
-		display: none;
-	}
-}
-
-@media (max-width: 768px) {
-	header.tag-head {
-		padding: 7.5em;
-	}
-
-	article .date {
-		margin-top: 0;
-		margin-bottom: 1em;
-	}
-
-	html, body {
-		font-size: 18px;
-	}
-
-	.main-header {
-		min-height: 30vh;
-	}
-
-	.author-title {
-		font-size: 2.25em;
-	}
-
-	.author-bio {
-		font-size: 1em;
-	}
-
-	.nav-items {
-		padding-top: .5em;
-	}
-
-	.c-hamburger--htx {
-    	right: 15px
-	}
-
-	.author, .share{
-		padding: 0;
-		margin: 0;
-		text-align: center;
-	}
-
-	.post-template .post-title {
-		text-align: left;
-	}
-}
-
-@media (max-width: 568px) {
-	header.tag-head {
-		padding: 2em;
-	}
-
-	header {
-		font-size: 14px;
-	}
-
-	html,body {
-		font-size: 15px;
-	}
-
-	.main-header {
-		min-height: 20vh;
-	}
-
-	h1.post-title, h2.post-title {
-		font-size: 2em;
-	}
-
-	.read-next {
-		display: block;
-	}
-
-	article footer.post-meta, .post-template .post-meta, .post-info {
-		display: none!important;
-	}
-
-	.blog-logo {
-		display: none;
-	}
-
-	.author-location, .author-link, .author-stats {
-		display: block;
-		padding: 0;
-	}
-
-	.share h3 {
-		margin-bottom: .75em;
-	}
-
-	.read-next {
-		margin-top: 2em;
-	}
-}
-
 .c-hamburger {
     display: block;
     position: fixed;
@@ -1064,4 +964,130 @@ iframe, .fluid-width-video-wrapper {
 
 input#hamburger-menu {
     display: none
+}
+
+/* MEDIA QUERIES GENERAL */
+
+@media (max-width: 767px) {
+	.author-img-post {
+		display: none;
+	}
+}
+
+@media (max-width: 768px) {
+	header.tag-head {
+		padding: 7.5em;
+	}
+
+	article .date {
+		margin-top: 0;
+		margin-bottom: 1em;
+	}
+
+	html, body {
+		font-size: 18px;
+	}
+
+	.main-header {
+		min-height: 30vh;
+	}
+
+	.author-title {
+		font-size: 2.25em;
+	}
+
+	.author-bio {
+		font-size: 1em;
+	}
+
+	.nav-items {
+		padding-top: .5em;
+	}
+
+    .c-hamburger--htx {
+        right: 20px;
+        top: 15px;
+    }
+
+    .c-hamburger {
+        width: 40px;
+        height: 40px;
+    }
+
+    .c-hamburger span {
+        left: 0;
+        right: 0;
+        height: 3px;
+        top: 22px;
+    }
+
+    .c-hamburger span::after,
+    .c-hamburger span::before {
+        height: 3px;
+    }
+
+    .c-hamburger span::before {
+        top: -15px;
+    }
+
+    .c-hamburger span::after {
+        bottom: -15px;
+    }
+
+	.author, .share{
+		padding: 0;
+		margin: 0;
+		text-align: center;
+	}
+
+	.post-template .post-title {
+		text-align: left;
+	}
+}
+
+@media (max-width: 568px) {
+	header.tag-head {
+		padding: 2em;
+	}
+
+	header {
+		font-size: 14px;
+	}
+
+	html,body {
+		font-size: 15px;
+	}
+
+	.main-header {
+		min-height: 20vh;
+	}
+
+	h1.post-title, h2.post-title {
+		font-size: 2em;
+	}
+
+	.read-next {
+		display: block;
+	}
+
+	article footer.post-meta, .post-template .post-meta, .post-info {
+		display: none!important;
+	}
+
+	.blog-logo {
+		display: none;
+	}
+
+	.author-location, .author-link, .author-stats {
+		display: block;
+		padding: 0;
+	}
+
+	.share h3 {
+		margin-bottom: .75em;
+	}
+
+	.read-next {
+		margin-top: 2em;
+	}
 }
