--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -1,13 +1,13 @@
 footer.center-xs
     h3 #{me.name}
     .social
-        a(href="https://twitter.com/#{social.twitter}")
+        a(href="https://twitter.com/#{social.twitter}", target="_blank")
             svg.icon.icon-linkedin
                 use(xlink:href="#icon-twitter")
-        a(href="https://github.com/#{social.github}")
+        a(href="https://github.com/#{social.github}", target="_blank")
             svg.icon.icon-github
                 use(xlink:href="#icon-github")
-        a(href="https://es.linkedin.com/in/#{social.linkedin}")
+        a(href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
             svg.icon.icon-linkedin
                 use(xlink:href="#icon-linkedin")
 script.
