--- a/src/app/templates/_includes/_header.jade
+++ b/src/app/templates/_includes/_header.jade
@@ -1,14 +1,14 @@
 include _nav.jade
-header.site-header.center-xs(itemprop="author" itemscope itemtype="http://schema.org/Person")
+header.site-header.center-xs(itemprop="author", itemscope, itemtype="http://schema.org/Person")
     h1(itemprop="name") #{me.name}
     h3(itemprop="description") #{me.bio}
     .social
-        a(itemprop="sameAs", href="https://twitter.com/#{social.twitter}")
+        a(itemprop="sameAs", onclick="ga('send', 'event', 'Social Icons', 'GitHub');", href="https://twitter.com/#{social.twitter}", target="_blank")
             svg.icon.icon-twitter
                 use(xlink:href="#icon-twitter")
-        a(itemprop="sameAs", href="https://github.com/#{social.github}")
+        a(itemprop="sameAs", onclick="ga('send', 'event', 'Social Icons', 'Twitter');", href="https://github.com/#{social.github}", target="_blank")
             svg.icon.icon-github
                 use(xlink:href="#icon-github")
-        a(itemprop="sameAs", href="https://es.linkedin.com/in/#{social.linkedin}")
+        a(itemprop="sameAs", onclick="ga('send', 'event', 'Social Icons', 'LinkedIn');", href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
             svg.icon.icon-linkedin
                 use(xlink:href="#icon-linkedin")
