Update blog templates and static data
Added tracking and modified the code.

--- a/src/blog/content/themes/carloscuesta/partials/navigation.hbs
+++ b/src/blog/content/themes/carloscuesta/partials/navigation.hbs
@@ -1,13 +1,15 @@
 <nav class="nav row middle-xs">
 	<input id="hamburger-menu" type="checkbox" class="c-hamburger__input">
-	<label for="hamburger-menu" class="c-hamburger c-hamburger--htx">
+	<label for="hamburger-menu" class="c-hamburger c-hamburger--htx" onclick="ga('send', 'event', 'Blog', 'Menu - Open/Close');">
 		<span></span>
 	</label>
 	<div class="modal">
 		<div class="modal-content">
 			<ul class="navigation">
 			{{#foreach navigation}}
-    	    	<li class="item nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation"><a href="{{url absolute="true"}}">{{label}}</a></li>
+    	    	<li class="item nav-{{slug}}{{#if current}} nav-current{{/if}}" role="presentation">
+    	    		<a href="{{url absolute="true"}}" onclick="ga('send', 'event', 'Blog', 'Menu - {{label}}');">{{label}}</a>
+    	    	</li>
     		{{/foreach}}
 			</ul>
 		</div>
