--- a/src/app/templates/_includes/_nav.jade
+++ b/src/app/templates/_includes/_nav.jade
@@ -6,7 +6,7 @@ nav.nav.row.middle-xs
         .modal-content
             ul.navigation
                 li.item
-                    a(href='https://carloscuesta.me', onclick="ga('send', 'event', 'Menu', 'Home');", target="_blank")
+                    a(href='https://carloscuesta.me', onclick="ga('send', 'event', 'Menu', 'Home');")
                         |Home
                 li.item
                     a(href='https://carloscuesta.me/blog', onclick="ga('send', 'event', 'Menu', 'Blog');", target="_blank")
