--- a/src/blog/content/themes/carloscuesta/partials/loop.hbs
+++ b/src/blog/content/themes/carloscuesta/partials/loop.hbs
@@ -4,7 +4,7 @@
 		    <header class="row">
 		    	<div class="col-xs-12">
 		        	<h2 itemprop="name headline" class="post-title preview">
-		        		<a itemprop="url mainEntityOfPage" href="{{url absolute="true"}}">{{{title}}}</a>
+		        		<a itemprop="url mainEntityOfPage" href="{{url absolute="true"}}" onclick="ga('send', 'event', 'Blog', '{{{title}}}');">{{{title}}}</a>
 		        	</h2>
 		        </div>
 		        <div class="col-xs-12 post-info">
@@ -12,11 +12,13 @@
 		        	<meta itemprop="dateModified" content="{{updated_at}}"/>
 		        	<span class="tags">
 		        		{{#foreach tags}}
-        					<a href="{{url}}" title="{{name}}" class="tag-{{name}}">{{name}}</a>
+        					<a href="{{url}}" title="{{name}}" onclick="ga('send', 'event', 'Blog', 'tag-{{name}}');" class="tag-{{name}}">{{name}}</a>
     					{{/foreach}}
     				</span>
 		        	<span itemprop="author" itemscope itemtype="http://schema.org/Person" class="author">
-		        		<span itemprop="name">{{author}}</span>
+		        		<span itemprop="name">
+		        			{{#author}}<a href="{{url}}" onclick="ga('send', 'event', 'Blog', 'Author - {{name}}');">{{name}}</a>{{/author}}
+		        		</span>
 		        	</span>
 		        </div>
 		        <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
@@ -35,7 +37,7 @@
 		    </header>
 		    <section itemprop="description" class="post-excerpt">
 		        <p>{{excerpt words="30"}} ...
-		    	<a class="read-more" href="{{url}}"> Read more &raquo;</a></p>
+		    	<a class="read-more" href="{{url}}" onclick="ga('send', 'event', 'Blog', 'Read More - {{{title}}}');"> Read more &raquo;</a></p>
 		    </section>
 		</article>
 	{{/foreach}}
