--- a/src/app/templates/_includes/_nav.jade
+++ b/src/app/templates/_includes/_nav.jade
@@ -12,5 +12,5 @@ nav.nav.row.middle-xs
                     a(href='https://carloscuesta.me/blog', onclick="ga('send', 'event', 'Menu', 'Blog');", target="_blank")
                         |Blog
                 li.item
-                    a(href='mailto:crloscuesta@gmail?subject=Hello!', onclick="ga('send', 'event', 'Menu', 'Mail');", target="_blank")
+                    a(href='mailto:crloscuesta@gmail.com?subject=Hello!', onclick="ga('send', 'event', 'Menu', 'Mail');", target="_blank")
                         |Contact
